# AI_geneticCarsCPP

./: .gitignore  README.md  buildAll.sh
AppLearning/main/: CMakeLists.txt
AppLearning/main/inc/: AppLearning.hpp  AppLearningUi.h  CarsLearningWorker.hpp  TrackData1.hpp  TrackData2.hpp  TrackData3.hpp  TrackData4.hpp
AppLearning/main/src/: AppLearning.cpp  AppLearning.ui  AppLearningUi.cpp  CarsLearningWorker.cpp  TrackData1.cpp  TrackData2.cpp  TrackData3.cpp  TrackData4.cpp  main.cpp
AppRace/main/: AppRace.pro  CMakeLists.txt
AppRace/main/inc/: AppRace.hpp  AppRaceUi.h  CarParameters.hpp  CarRacingWorker.hpp  TrackDataRace.hpp
AppRace/main/src/: AppRace.cpp  AppRace.ui  AppRaceUi.cpp  CarParameters.cpp  CarRacingWorker.cpp  TrackDataRace.cpp  main.cpp
CObject/main/inc/: CDouble.hpp  CInteger.hpp  CObject.hpp  CString.hpp
CoreApp/main/inc/: CarMotionHelper.hpp
CoreApp/main/src/: CarMotionHelper.cpp
Debug/main/inc/: Debugger.hpp  Logger.hpp
Debug/main/src/: Debugger.cpp  Logger.cpp
DemoGui/main/inc/: ScreenGeneticCar.hpp
DemoGui/main/src/: ScreenGeneticCar.cpp
DemoMisc/main/inc/: Car.hpp  CarSensor.hpp  CarSensorLine.hpp  CarSensorPoint.hpp  Track.hpp
DemoMisc/main/src/: Car.cpp  CarSensorLine.cpp  CarSensorPoint.cpp  Track.cpp
DemoMisc/test/: AppTestDemoMisc.pro  CMakeLists.txt
DemoMisc/test/inc/: AppTestDemoMisc.h  DemoCar.hpp
DemoMisc/test/src/: AppTestDemoMisc.cpp  AppTestDemoMisc.ui  DemoCar.cpp  main.cpp
Draw/main/inc/: DrawParameterNeuralNetwork.hpp  Drawer.hpp  Texture.hpp  TextureModifier.hpp
Draw/main/resources/: images.qrc
Draw/main/src/: Drawer.cpp  Texture.cpp  TextureModifier.cpp
Draw/test/: AppTestDraw.pro  CMakeLists.txt
Draw/test/inc/: AppTestDraw.h  TestDraw.hpp
Draw/test/src/: AppTestDraw.cpp  AppTestDraw.ui  TestDraw.cpp  main.cpp
Genetic/main/inc/: GeneticCrossParameter.hpp  GeneticDna.hpp  GeneticDnaList.hpp  GeneticDnaListObject.hpp  GeneticDnaListString.hpp  GeneticDnaNeuralNetwork.hpp  GeneticDnaTree.hpp  GeneticDnaTreeFormula.hpp  GeneticGene.hpp  GeneticGeneDouble.hpp  GeneticGeneFormulaOperand.hpp  GeneticGeneObject.hpp  GeneticGeneString.hpp  GeneticGeneTreeBranch.hpp  GeneticIndividual.hpp  GeneticPopulation.hpp
Genetic/main/src/: GeneticCrossParameter.cpp  GeneticDnaList.cpp  GeneticDnaListObject.cpp  GeneticDnaListString.cpp  GeneticDnaNeuralNetwork.cpp  GeneticDnaTree.cpp  GeneticDnaTreeFormula.cpp  GeneticGeneDouble.cpp  GeneticGeneFormulaOperand.cpp  GeneticGeneObject.cpp  GeneticGeneString.cpp  GeneticGeneTreeBranch.cpp  GeneticIndividual.cpp  GeneticPopulation.cpp
Genetic/test/: CMakeLists.txt
Genetic/test/src/: AppTest.cpp
Misc/main/inc/: BezierSpline2D.hpp  Couple.hpp  Misc.hpp  Triple.hpp  Vector2D.hpp
Misc/main/src/: BezierSpline2D.cpp  Misc.cpp  Vector2D.cpp
Misc/test/: CMakeLists.txt
Misc/test/src/: AppTest.cpp
Neural/main/inc/: NeuralActivation.hpp  NeuralActivationHeaviside.hpp  NeuralActivationSigmoid.hpp  NeuralInput.hpp  NeuralInputValue.hpp  NeuralLayer.hpp  NeuralNetwork.hpp  NeuralNeuron.hpp
Neural/main/src/: NeuralActivation.cpp  NeuralInputValue.cpp  NeuralLayer.cpp  NeuralNetwork.cpp  NeuralNeuron.cpp
Neural/test/: CMakeLists.txt
Neural/test/src/: AppTest.cpp
TrackData/main/inc/: TrackData.hpp
TrackData/main/src/: TrackData.cpp
